; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/d3dcompiler_43/extr_asmparser.c_asmparser_srcreg_vs_1.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/d3dcompiler_43/extr_asmparser.c_asmparser_srcreg_vs_1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.asm_parser = type { i32, i32 }
%struct.instruction = type { %struct.shader_reg* }
%struct.shader_reg = type { i32 }

@vs_1_reg_allowed = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [51 x i8] c"Line %u: Source register %s not supported in VS 1\0A\00", align 1
@PARSE_ERR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.asm_parser*, %struct.instruction*, i32, %struct.shader_reg*)* @asmparser_srcreg_vs_1 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @asmparser_srcreg_vs_1(%struct.asm_parser* %0, %struct.instruction* %1, i32 %2, %struct.shader_reg* %3) #0 {
  %5 = alloca %struct.asm_parser*, align 8
  %6 = alloca %struct.instruction*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.shader_reg*, align 8
  %9 = alloca %struct.shader_reg, align 4
  %10 = alloca %struct.shader_reg, align 4
  store %struct.asm_parser* %0, %struct.asm_parser** %5, align 8
  store %struct.instruction* %1, %struct.instruction** %6, align 8
  store i32 %2, i32* %7, align 4
  store %struct.shader_reg* %3, %struct.shader_reg** %8, align 8
  %11 = load %struct.shader_reg*, %struct.shader_reg** %8, align 8
  %12 = load i32, i32* @vs_1_reg_allowed, align 4
  %13 = call i32 @check_reg_type(%struct.shader_reg* %11, i32 %12)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %27, label %15

15:                                               ; preds = %4
  %16 = load %struct.asm_parser*, %struct.asm_parser** %5, align 8
  %17 = load %struct.asm_parser*, %struct.asm_parser** %5, align 8
  %18 = getelementptr inbounds %struct.asm_parser, %struct.asm_parser* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = load %struct.shader_reg*, %struct.shader_reg** %8, align 8
  %21 = call i32 @debug_print_srcreg(%struct.shader_reg* %20)
  %22 = call i32 @asmparser_message(%struct.asm_parser* %16, i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str, i64 0, i64 0), i32 %19, i32 %21)
  %23 = load %struct.asm_parser*, %struct.asm_parser** %5, align 8
  %24 = getelementptr inbounds %struct.asm_parser, %struct.asm_parser* %23, i32 0, i32 0
  %25 = load i32, i32* @PARSE_ERR, align 4
  %26 = call i32 @set_parse_status(i32* %24, i32 %25)
  br label %27

27:                                               ; preds = %15, %4
  %28 = load %struct.asm_parser*, %struct.asm_parser** %5, align 8
  %29 = load %struct.shader_reg*, %struct.shader_reg** %8, align 8
  %30 = getelementptr inbounds %struct.shader_reg, %struct.shader_reg* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = call i32 @check_legacy_srcmod(%struct.asm_parser* %28, i32 %31)
  %33 = load %struct.asm_parser*, %struct.asm_parser** %5, align 8
  %34 = load %struct.shader_reg*, %struct.shader_reg** %8, align 8
  %35 = getelementptr inbounds %struct.shader_reg, %struct.shader_reg* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  %37 = call i32 @check_abs_srcmod(%struct.asm_parser* %33, i32 %36)
  %38 = load %struct.shader_reg*, %struct.shader_reg** %8, align 8
  %39 = call i32 @map_oldvs_register(%struct.shader_reg* %38)
  %40 = getelementptr inbounds %struct.shader_reg, %struct.shader_reg* %10, i32 0, i32 0
  store i32 %39, i32* %40, align 4
  %41 = bitcast %struct.shader_reg* %9 to i8*
  %42 = bitcast %struct.shader_reg* %10 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %41, i8* align 4 %42, i64 4, i1 false)
  %43 = load %struct.instruction*, %struct.instruction** %6, align 8
  %44 = getelementptr inbounds %struct.instruction, %struct.instruction* %43, i32 0, i32 0
  %45 = load %struct.shader_reg*, %struct.shader_reg** %44, align 8
  %46 = load i32, i32* %7, align 4
  %47 = sext i32 %46 to i64
  %48 = getelementptr inbounds %struct.shader_reg, %struct.shader_reg* %45, i64 %47
  %49 = bitcast %struct.shader_reg* %48 to i8*
  %50 = bitcast %struct.shader_reg* %9 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %49, i8* align 4 %50, i64 4, i1 false)
  ret void
}

declare dso_local i32 @check_reg_type(%struct.shader_reg*, i32) #1

declare dso_local i32 @asmparser_message(%struct.asm_parser*, i8*, i32, i32) #1

declare dso_local i32 @debug_print_srcreg(%struct.shader_reg*) #1

declare dso_local i32 @set_parse_status(i32*, i32) #1

declare dso_local i32 @check_legacy_srcmod(%struct.asm_parser*, i32) #1

declare dso_local i32 @check_abs_srcmod(%struct.asm_parser*, i32) #1

declare dso_local i32 @map_oldvs_register(%struct.shader_reg*) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
